# extrimian-dfi-ssi-hackalong-api

./: Cargo.toml
.github/workflows/: build.yml  check_health.yml
json_template/: ticket_template.json
src/: main.rs  models.rs  tests.rs  utils.rs
src/routes/: routes.rs
src/services/: mod.rs  services.rs
