[package]
name = "extrimian-dfi-ssi-hackalong-api"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
log = "0.4.22"
nanoid = "0.4.0"
reqwest = { version = "0.12.7", features = ["json"] }
rocket = { version = "0.5.1", features = ["json"] }
serde_json = "1.0.127"
tokio = { version = "1.40.0", features = ["full", "rt-multi-thread", "macros"] }
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
